@@ -1,7 +1,10 @@
 package com.unishare.api.modules.service.service.impl;
 
+import com.unishare.api.common.constants.Roles;
 import com.unishare.api.common.dto.AppException;
 import com.unishare.api.common.constants.MentorVerificationStatuses;
+import com.unishare.api.modules.auth.entity.User;
+import com.unishare.api.modules.auth.repository.UserRepository;
 import com.unishare.api.modules.service.exception.ServiceErrorCode;
 import com.unishare.api.modules.service.dto.MentorDto.*;
 import com.unishare.api.modules.service.entity.MentorProfile;
@@ -13,12 +16,19 @@ import com.unishare.api.modules.service.repository.PackageCurriculumRepository;
 import com.unishare.api.modules.service.repository.ServicePackageRepository;
 import com.unishare.api.modules.service.repository.ServicePackageVersionRepository;
 import com.unishare.api.modules.service.service.MentorService;
+import com.unishare.api.modules.user.entity.UserProfile;
+import com.unishare.api.modules.user.repository.UserProfileRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.math.BigDecimal;
+import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.List;
+import java.util.Map;
 import java.util.UUID;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @Service
@@ -29,17 +39,26 @@ public class MentorServiceImpl implements MentorService {
     private final ServicePackageRepository servicePackageRepository;
     private final ServicePackageVersionRepository servicePackageVersionRepository;
     private final PackageCurriculumRepository packageCurriculumRepository;
+    private final UserRepository userRepository;
+    private final UserProfileRepository userProfileRepository;
 
     @Override
     @Transactional(readOnly = true)
     public MentorProfileResponse getMentorProfile(UUID mentorId) {
-        MentorProfile profile = mentorProfileRepository.findById(mentorId)
-                .orElseThrow(() -> new AppException(ServiceErrorCode.MENTOR_NOT_FOUND, "Mentor not found"));
+        return mentorProfileRepository.findById(mentorId)
+                .map(mp -> toFullMentorResponse(mp))
+                .orElseGet(() -> buildResponseForMentorWithoutServiceProfile(mentorId));
+    }
 
+    /** Có đủ {@link MentorProfile} + gói — dùng cho chi tiết. */
+    private MentorProfileResponse toFullMentorResponse(MentorProfile profile) {
+        UUID mentorId = profile.getUserId();
         List<ServicePackage> packages = servicePackageRepository.findByMentorId(mentorId);
+        UserProfile up = userProfileRepository.findById(mentorId).orElse(null);
 
         return MentorProfileResponse.builder()
                 .userId(profile.getUserId())
+                .displayName(up != null ? up.getDisplayName() : null)
                 .headline(profile.getHeadline())
                 .expertise(profile.getExpertise())
                 .basePrice(profile.getBasePrice())
@@ -48,6 +67,24 @@ public class MentorServiceImpl implements MentorService {
                 .verificationStatus(profile.getVerificationStatus())
                 .packages(packages.stream().map(this::mapToPackageResponse).collect(Collectors.toList()))
                 .build();
+    }
+
+    /**
+     * User có role MENTOR nhưng chưa tạo {@code mentor_profiles} — vẫn trả JSON để client hiển thị stub.
+     */
+    private MentorProfileResponse buildResponseForMentorWithoutServiceProfile(UUID mentorId) {
+        User user = userRepository.findByIdWithRoles(mentorId)
+                .orElseThrow(() -> new AppException(ServiceErrorCode.MENTOR_NOT_FOUND, "Mentor not found"));
+        if (!userHasMentorRole(user)) {
+            throw new AppException(ServiceErrorCode.MENTOR_NOT_FOUND, "Mentor not found");
+        }
+        UserProfile up = userProfileRepository.findById(mentorId).orElse(null);
+        return toDirectoryItem(user, null, up);
+    }
+
+    private static boolean userHasMentorRole(User user) {
+        return user.getUserRoles().stream()
+                .anyMatch(ur -> ur.getRole() != null && Roles.MENTOR.equals(ur.getRole().getName()));
     }
 
     @Override
@@ -71,10 +108,151 @@ public class MentorServiceImpl implements MentorService {
 
     @Override
     @Transactional(readOnly = true)
-    public List<MentorProfileResponse> getAllVerifiedMentors() {
-        return mentorProfileRepository.findByVerificationStatus("verified").stream()
-                .map(profile -> getMentorProfile(profile.getUserId()))
-                .collect(Collectors.toList());
+    public List<MentorProfileResponse> searchMentors(
+            String q,
+            Boolean verifiedOnly,
+            BigDecimal maxPrice,
+            List<String> expertise,
+            String sort) {
+
+        List<User> withRole = userRepository.findAllWithRoleName(Roles.MENTOR);
+        if (withRole.isEmpty()) {
+            return List.of();
+        }
+
+        List<UUID> ids = withRole.stream().map(User::getId).toList();
+        Map<UUID, MentorProfile> mpMap = mentorProfileRepository.findAllById(ids).stream()
+                .collect(Collectors.toMap(MentorProfile::getUserId, Function.identity()));
+        Map<UUID, UserProfile> upMap = userProfileRepository.findAllById(ids).stream()
+                .collect(Collectors.toMap(UserProfile::getUserId, Function.identity()));
+
+        boolean onlyVerified = Boolean.TRUE.equals(verifiedOnly);
+
+        List<MentorProfileResponse> out = new ArrayList<>();
+        for (User u : withRole) {
+            MentorProfile mp = mpMap.get(u.getId());
+            UserProfile up = upMap.get(u.getId());
+            if (!matchesVerified(mp, onlyVerified)) {
+                continue;
+            }
+            if (!matchesQ(mp, up, q)) {
+                continue;
+            }
+            if (!matchesMaxPrice(mp, maxPrice)) {
+                continue;
+            }
+            if (!matchesExpertiseAny(mp, expertise)) {
+                continue;
+            }
+            out.add(toDirectoryItem(u, mp, up));
+        }
+
+        out.sort(responseComparator(sort));
+        return out;
+    }
+
+    private static boolean matchesVerified(MentorProfile mp, boolean onlyVerified) {
+        if (!onlyVerified) {
+            return true;
+        }
+        return mp != null && MentorVerificationStatuses.VERIFIED.equalsIgnoreCase(mp.getVerificationStatus());
+    }
+
+    private static boolean matchesQ(MentorProfile mp, UserProfile up, String q) {
+        if (q == null || q.isBlank()) {
+            return true;
+        }
+        String needle = q.trim().toLowerCase();
+        if (up != null) {
+            if (up.getDisplayName().toLowerCase().contains(needle)) {
+                return true;
+            }
+            if (up.getHeadline() != null && up.getHeadline().toLowerCase().contains(needle)) {
+                return true;
+            }
+            if (up.getBio() != null && up.getBio().toLowerCase().contains(needle)) {
+                return true;
+            }
+        }
+        if (mp != null) {
+            if (mp.getHeadline() != null && mp.getHeadline().toLowerCase().contains(needle)) {
+                return true;
+            }
+            if (mp.getExpertise() != null && mp.getExpertise().toLowerCase().contains(needle)) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    private static boolean matchesMaxPrice(MentorProfile mp, BigDecimal maxPrice) {
+        if (maxPrice == null) {
+            return true;
+        }
+        if (mp == null || mp.getBasePrice() == null) {
+            return true;
+        }
+        return mp.getBasePrice().compareTo(maxPrice) <= 0;
+    }
+
+    private static boolean matchesExpertiseAny(MentorProfile mp, List<String> tags) {
+        if (tags == null || tags.isEmpty()) {
+            return true;
+        }
+        String bucket = (mp != null && mp.getExpertise() != null) ? mp.getExpertise().toLowerCase() : "";
+        for (String tag : tags) {
+            if (tag != null && !tag.isBlank() && bucket.contains(tag.trim().toLowerCase())) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    private static Comparator<MentorProfileResponse> responseComparator(String sort) {
+        String s = sort == null || sort.isBlank() ? "popular" : sort.trim().toLowerCase();
+        return switch (s) {
+            case "rating" -> Comparator
+                    .comparing((MentorProfileResponse r) -> r.getRatingAvg() != null ? r.getRatingAvg() : 0f)
+                    .reversed();
+            case "price-asc" -> Comparator.comparing(
+                    MentorProfileResponse::getBasePrice,
+                    Comparator.nullsLast(Comparator.naturalOrder()));
+            case "price-desc" -> Comparator.comparing(
+                    MentorProfileResponse::getBasePrice,
+                    Comparator.nullsLast(Comparator.reverseOrder()));
+            default -> Comparator
+                    .comparing((MentorProfileResponse r) -> r.getSessionsCompleted() != null ? r.getSessionsCompleted() : 0)
+                    .reversed();
+        };
+    }
+
+    /** Danh sách: không nạp gói; ghép tên từ {@code user_profiles} + mentor service profile. */
+    private MentorProfileResponse toDirectoryItem(User u, MentorProfile mp, UserProfile up) {
+        String displayName = up != null ? up.getDisplayName() : "Người dùng";
+        String headline;
+        if (mp != null && notBlank(mp.getHeadline())) {
+            headline = mp.getHeadline();
+        } else if (up != null && notBlank(up.getHeadline())) {
+            headline = up.getHeadline();
+        } else {
+            headline = "Chưa cập nhật hồ sơ mentor";
+        }
+
+        return MentorProfileResponse.builder()
+                .userId(u.getId())
+                .displayName(displayName)
+                .headline(headline)
+                .expertise(mp != null ? mp.getExpertise() : null)
+                .basePrice(mp != null ? mp.getBasePrice() : null)
+                .ratingAvg(mp != null ? mp.getRatingAvg() : 0f)
+                .sessionsCompleted(mp != null ? mp.getSessionsCompleted() : 0)
+                .verificationStatus(mp != null ? mp.getVerificationStatus() : MentorVerificationStatuses.PENDING)
+                .packages(List.of())
+                .build();
+    }
+
+    private static boolean notBlank(String s) {
+        return s != null && !s.isBlank();
     }
 
     @Override
